Update tinyhttpd example